some quick updates

--- a/index.html
+++ b/index.html
@@ -46,12 +46,23 @@
 
 </head>
 <body>
-    <div id="container">
+  <div class="container">
+    <h1 align="center">Deep Question</h1>
+    <div class="row">
+      <div class="four columns">Mood Meter</div>
+      <div class="eight columns">Insert Question Here</div>
+    </div>
+    <div class="row">
+      <div class="four columns">Suggestion Box</div>
+      <div class="eight columns">
+        <div id="container1">
         <div id="matches"></div>
         <canvas id="canvas"></canvas>
         <div id="cancel">X</div>
     </div>
-
+      </div>
+    </div>
+  </div>  
 
 <script src="js/outlines.js" type="text/javascript"></script>
 <script src="js/script.js" type="text/javascript"></script>
