--- a/index.html
+++ b/index.html
@@ -53,16 +53,21 @@
       <div class="eight columns">Insert Question Here</div>
     </div>
     <div class="row">
-      <div class="four columns">Suggestion Box</div>
+      <div class="four columns">
+        Suggestion Box<br /> (increase size based on need)
+      </div>
+      
       <div class="eight columns">
+        Test Content
         <div id="container1">
-        <div id="matches"></div>
-        <canvas id="canvas"></canvas>
-        <div id="cancel">X</div>
-    </div>
+          <div id="matches"></div>
+          <canvas id="canvas"></canvas>
+          <div id="cancel">X</div>
+        </div>
       </div>
     </div>
   </div>  
+  
 
 <script src="js/outlines.js" type="text/javascript"></script>
 <script src="js/script.js" type="text/javascript"></script>
