--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     </div>
   </div>  
   
-
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.3/jquery.min.js"></script>
 <script src="js/outlines.js" type="text/javascript"></script>
 <script src="js/script.js" type="text/javascript"></script>
 </body>
